--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.8",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "html2canvas": "^1.4.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
